// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Display /> should render Display with color 1`] = `
.c0 {
  color: hsla(220,30%,96%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 3.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;

exports[`<Display /> should render Display with default properties 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 3.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;

exports[`<Display /> should render Display with mixed color 1`] = `
.c0 {
  color: hsla(217,56%,17%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 3.5rem;
  margin: 0;
  padding: 0;
}

.c1 {
  color: hsla(195,100%,31%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 3.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Supercharge your business with the all‑powerful
     
    <span
      class="c1"
      data-blade-component="display"
    >
      Payment Gateway
    </span>
  </h1>
</div>
`;

exports[`<Display /> should render Display with size "large" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 4rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 4.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;

exports[`<Display /> should render Display with size "medium" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3.5rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 4rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;

exports[`<Display /> should render Display with size "small" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 3.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;

exports[`<Display /> should render Display with size "xlarge" 1`] = `
.c0 {
  color: hsla(216,16%,60%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 5.5rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 6.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;

exports[`<Display /> should render Display with variant "small" and contrast "high" 1`] = `
.c0 {
  color: hsla(0,0%,100%,1);
  font-family: Lato,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Helvetica,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
  font-size: 3rem;
  font-weight: 700;
  font-style: normal;
  -webkit-text-decoration-line: none;
  text-decoration-line: none;
  line-height: 3.5rem;
  margin: 0;
  padding: 0;
}

<div>
  <h1
    class="c0"
    data-blade-component="display"
  >
    Displaying Landing Page Display
  </h1>
</div>
`;
